Bug 94827 - ToolBox events aren't delivered
Summary: ToolBox events aren't delivered
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Noel Grandin
URL:
Whiteboard: target:5.1.0
Keywords: bibisected, regression
: 94757 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-06 13:39 UTC by Maxim Monastirsky
Modified: 2016-10-25 19:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maxim Monastirsky 2015-10-06 13:39:57 UTC
Very recent regression on master.

Steps to reproduce:

1. Open Writer and enable the drawing toolbar.
2. Open one of the custom shapes dropdowns, and choose a shape other than the default.

Expected results:
The dropdown button should change its image according to the selected tool, and should have a pressed state.

Actual results:
The dropdown button still looks the same as before.

I debugged a bit, and it seems that no events are coming from the ToolBox activities, i.e. ToolbarLayoutManager::childWindowEvent is never called. I suspect it can be related to this one:

commit 1e67e94f1a308ca60d4934e9fe9d5c048225ebe8
Author: Noel Grandin <noel@peralex.com>
Date:   Mon Sep 21 08:03:25 2015 +0200

    convert Link<> to typed
    
    Change-Id: If3e2b00092440ebd42ae5b73ae2b0e44c3702683

(Bug 94757 could be also related to this, as it was also introduced between 20/9 - 22/9)

@Noel: Any chance you could take a look at this one? Thanks.
Comment 1 Maxim Monastirsky 2015-10-07 10:02:35 UTC
(In reply to Maxim Monastirsky from comment #0)
> (Bug 94757 could be also related to this, as it was also introduced between
> 20/9 - 22/9)
Confirmed. bisect range is the same for both:

http://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=f78216d15dbf0ac236894177a2876fe7dad608da...78e1acffcb3d40266bc075c8b88595accbf62a1b
Comment 2 Maxim Monastirsky 2015-10-07 10:04:59 UTC
*** Bug 94757 has been marked as a duplicate of this bug. ***
Comment 3 Noel Grandin 2015-10-07 13:31:55 UTC
This is definitely a consequence of my commit, looking at it.
Comment 4 Commit Notification 2015-10-08 09:04:01 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d0839fb98b8ec672e22b21867297317c8a961ee

fix for tdf#94827 - ToolBox events aren't delivered

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Maxim Monastirsky 2015-10-08 09:16:09 UTC
Fix verified. Thanks a lot!
Comment 6 Robinson Tryon (qubit) 2015-12-17 10:34:04 UTC Comment hidden (obsolete)