fix for tdf#94827 - ToolBox events aren't delivered

regression from 1e67e94f1a308ca60d4934e9fe9d5c048225ebe8
"convert Link<> to typed"

Change-Id: Ibb20366f0edcb9425d61ce5e9d5fb1a34533785b